# ironweb.rs

./: .env  .gitignore  Cargo.toml  Config.toml
backend/: Cargo.toml  csr.pem
backend/src/: database.rs  lib.rs  main.rs
backend/src/http/: login_credentials.rs  login_session.rs  logout.rs  mod.rs
backend/src/server/: mod.rs  test.rs
backend/src/token/: mod.rs  test.rs
backend/tests/: server.rs
backend/tls/: cert.pem  key.pem
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs
migrations/2024-05-15-083952_create_sessions/: up.sql
src/: config.rs  lib.rs  schema.rs
src/protocol/: mod.rs  model.rs  request.rs  response.rs
