[package]
name = "webapp"
version = "1.0.0"
edition = "2018"

[dependencies]
diesel = { version = "2.0.0", optional = true }
toml = "0.8.12"
serde = { version = "1.0.147", features = ["derive"] }
anyhow = "1.0.51"

[features]
backend = ["diesel"]

[workspace]
members = [
    "backend",
]
resolver = "2"