[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
actix = "0.10.0"
actix-cors = "0.5.4"
actix-web = "3.3.2"
anyhow = "1.0.51"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.73"
diesel = { version = "2.1.6", features = ["r2d2", "postgres"] }
r2d2 = "0.8"
clap = { version = "3.0", features = ["yaml"] }
webapp = { version = "1.0.0", path = "..", features = ["backend"] }
env_logger = "0.11.3"
log = "0.4.14"
url = "2.2.2"
num_cpus = "1.13.0"
jsonwebtoken = "9.3.0"
thiserror = "1.0.30"
uuid = { version = "1.8.0", features = ["v4"] }
dotenv = "0.15.0"


[dev-dependencies]
actix-http-test = "3.2.0"
actix-http = "3.6.0"
lazy_static = "1.4.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
