[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0.51"
sass-rs = "0.2.2"
url = "2.2.2"
webapp = { version = "1.0.0", path = ".." }

[dependencies]
anyhow = "1.0.51"
log = "0.4.14"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.30"
wasm-bindgen = "0.2.78"
webapp = { version = "1.0.0", path = ".." }
yew = "0.17.4"
yew-router = "0.16.0"